# car_gauges

./: sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/Fonts/: michroma_24.c  michroma_28.c  michroma_32.c  michroma_48.c  michroma_60.c  michroma_72.c  michroma_80.c
main/Guages/: Main_Clock.c  Main_Clock.h  Secondary_Clock.c  Secondary_Clock.h
main/Icons/: petrol_icon.c
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/TCA9554PWR/: TCA9554PWR.c  TCA9554PWR.h
main/Touch/: GT911.c  GT911.h
main/esp_now_lib/: esp_now_lib.c  esp_now_lib.h
main/wifi_lib/: wifi_lib.c  wifi_lib.h
